force-app/src/objects/TR1__ResumeSearch__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Active_Data_Source__c</fullName>
        <label>Active Data Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Active_Edu_Emp_Filters__c</fullName>
        <label>Active Edu/Emp Filters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Activity_Filter__c</fullName>
        <description>Field to store JSON value of Activity Facet from Candidate Search</description>
        <label>Activity Filter</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Additional_Locations_search__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Locations search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Advanced_Search_Date_Fields__c</fullName>
        <description>Configures available data range values per field (Advanced Search USAM)</description>
        <inlineHelpText>Using fields dependencies, specify the date field from Advanced Search and available data range values</inlineHelpText>
        <label>Advanced Search Date Fields</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TR1__Last_Placement_Date__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Advanced_Search_Date_Range__c</fullName>
        <description>Specifies values for data fields search criteria in USAM (Advanced Search)</description>
        <inlineHelpText>To add new value - specify the number of days that should be subtracted from Today (i.e. Last 7 day has API Name 7)</inlineHelpText>
        <label>Advanced Search Date Range</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TR1__Advanced_Search_Date_Fields__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>7</fullName>
                    <label>Last 7 days</label>
                </value>
                <value>
                    <fullName>30</fullName>
                    <label>Last 30 days</label>
                </value>
                <value>
                    <fullName>90</fullName>
                    <label>Last 90 days</label>
                </value>
                <value>
                    <fullName>365</fullName>
                    <label>Last Year</label>
                </value>
                <value>
                    <fullName>ThisCalendarYear</fullName>
                    <label>This Calendar Year</label>
                </value>
                <value>
                    <fullName>LastCalendarYear</fullName>
                    <label>Last Calendar Year</label>
                </value>
                <value>
                    <fullName>ExactDates</fullName>
                    <label>Exact Dates</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Advanced_Skills_Management_Enabled__c</fullName>
        <formula>$CustomMetadata.TR1__Search_Match_Configuration__mdt.TR1__SM_Config.TR1__Enable_Advanced_Skills_Management__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advanced Skills Management Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__All_Words__c</fullName>
        <inlineHelpText>This will allow you to perform an &quot;AND&quot; function.  To use this field simply type the word with a comma after.  Example, I need to find someone who has sales AND manager on their resume/CV I would enter:  sales, manager</inlineHelpText>
        <label>with all the words</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__ApplicationIds__c</fullName>
        <label>Application Ids</label>
        <length>111072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Autocompletion_Tags__c</fullName>
        <label>Autocompletion Tags</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Availability_Date_Range__c</fullName>
        <label>Availability Date Range</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>Today</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Next 1 day</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>Next 7 days</label>
                </value>
                <value>
                    <fullName>30</fullName>
                    <label>Next 30 days</label>
                </value>
                <value>
                    <fullName>90</fullName>
                    <label>Next 90 days</label>
                </value>
                <value>
                    <fullName>365</fullName>
                    <label>Next 1 year</label>
                </value>
                <value>
                    <fullName>ExactDates</fullName>
                    <label>Exact Dates</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Availability_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Availability_Friday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Friday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Availability_Monday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Availability_Saturday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Saturday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Availability_Shift__c</fullName>
        <label>Shift</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Availability_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Availability_Sunday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sunday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Availability_Thursday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Thursday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Availability_Tuesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tuesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Availability_Wednesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wednesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Background__c</fullName>
        <label>Background</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__BooleanKeyword__c</fullName>
        <label>boolean string</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Boolean_Keyword__c</fullName>
        <label>boolean string</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Call_List__c</fullName>
        <label>Call List</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Candidate_External_Id__c</fullName>
        <formula>TR1__Candidate__r.TR1__External_Candidate_Id__c</formula>
        <label>Candidate External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Candidate_Status__c</fullName>
        <label>Candidate Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Resume Searches</relationshipLabel>
        <relationshipName>Resume_Searches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Certifications__c</fullName>
        <label>Certifications</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agile</fullName>
                </value>
                <value>
                    <fullName>ASCP</fullName>
                </value>
                <value>
                    <fullName>CBP</fullName>
                </value>
                <value>
                    <fullName>CCIE</fullName>
                </value>
                <value>
                    <fullName>CCNA</fullName>
                </value>
                <value>
                    <fullName>CCNP</fullName>
                </value>
                <value>
                    <fullName>CCP</fullName>
                </value>
                <value>
                    <fullName>CIA</fullName>
                </value>
                <value>
                    <fullName>CISA</fullName>
                </value>
                <value>
                    <fullName>CISM</fullName>
                </value>
                <value>
                    <fullName>CISSP</fullName>
                </value>
                <value>
                    <fullName>CLS</fullName>
                </value>
                <value>
                    <fullName>CPA</fullName>
                </value>
                <value>
                    <fullName>CQE</fullName>
                </value>
                <value>
                    <fullName>GPHR</fullName>
                </value>
                <value>
                    <fullName>HT</fullName>
                </value>
                <value>
                    <fullName>ITIL</fullName>
                </value>
                <value>
                    <fullName>MBA</fullName>
                </value>
                <value>
                    <fullName>MCA - Architects</fullName>
                </value>
                <value>
                    <fullName>MCITP</fullName>
                </value>
                <value>
                    <fullName>MCSE</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>OCA</fullName>
                </value>
                <value>
                    <fullName>OCP</fullName>
                </value>
                <value>
                    <fullName>PHR</fullName>
                </value>
                <value>
                    <fullName>PMI-ACP</fullName>
                </value>
                <value>
                    <fullName>PMP</fullName>
                </value>
                <value>
                    <fullName>RAC</fullName>
                </value>
                <value>
                    <fullName>RHCE - Red Hat</fullName>
                </value>
                <value>
                    <fullName>Scrum Master</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__City_Search_Scale__c</fullName>
        <label>City Search Scale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Contact_Owner_Ids__c</fullName>
        <label>Contact Owner Ids</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Contact_Owner_Names__c</fullName>
        <label>Contact Owner</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Country_Search_Scale__c</fullName>
        <label>Country Search Scale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>United States(US)</fullName>
                </value>
                <value>
                    <fullName>United Kingdom(UK)</fullName>
                </value>
                <value>
                    <fullName>Canada(CA)</fullName>
                </value>
                <value>
                    <fullName>Albania (AL)</fullName>
                </value>
                <value>
                    <fullName>Andorra(AD)</fullName>
                </value>
                <value>
                    <fullName>Armenia(AM)</fullName>
                </value>
                <value>
                    <fullName>Austria(AT)</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan(AZ)</fullName>
                </value>
                <value>
                    <fullName>Belarus(BY)</fullName>
                </value>
                <value>
                    <fullName>Belgium(BE)</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina(BA)</fullName>
                </value>
                <value>
                    <fullName>Brazil(BR)</fullName>
                </value>
                <value>
                    <fullName>Bulgaria(BG)</fullName>
                </value>
                <value>
                    <fullName>China(CN)</fullName>
                </value>
                <value>
                    <fullName>Croatia(HR)</fullName>
                </value>
                <value>
                    <fullName>Czech Republic(CZ)</fullName>
                </value>
                <value>
                    <fullName>Denmark(DK)</fullName>
                </value>
                <value>
                    <fullName>Estonia(EE)</fullName>
                </value>
                <value>
                    <fullName>Finland(FI)</fullName>
                </value>
                <value>
                    <fullName>France(FR)</fullName>
                </value>
                <value>
                    <fullName>Georgia(GE)</fullName>
                </value>
                <value>
                    <fullName>Germany (DE)</fullName>
                </value>
                <value>
                    <fullName>Greece(GR)</fullName>
                </value>
                <value>
                    <fullName>Hungary(HU)</fullName>
                </value>
                <value>
                    <fullName>Iceland(IS)</fullName>
                </value>
                <value>
                    <fullName>Ireland(IE)</fullName>
                </value>
                <value>
                    <fullName>Italy(IT)</fullName>
                </value>
                <value>
                    <fullName>Japan(JP)</fullName>
                </value>
                <value>
                    <fullName>Kazakhstan(KZ)</fullName>
                </value>
                <value>
                    <fullName>Kyrgyzstan (KG)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Created_From_Date__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Created_To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Distance_Search_Scale__c</fullName>
        <label>Distance Search Scale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Education_Tags__c</fullName>
        <label>Education Tags</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Employment_Tags__c</fullName>
        <label>Employment Tags</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Exact_Phrase__c</fullName>
        <inlineHelpText>This will allow you to encapsulate the search terms  To use this field put quotes around the phrase.   Example, I need to find someone has sales manager on their resume/CV.  I would enter: &quot;sales manager&quot;</inlineHelpText>
        <label>with the exact phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Experience_Level__c</fullName>
        <label>Experience Level</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__External_Credentials__c</fullName>
        <label>External Credentials</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__External_Search_Request__c</fullName>
        <label>External Search Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Extraction_Method__c</fullName>
        <label>Extraction Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Fields_for_Selection__c</fullName>
        <label>Fields for Selection</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Fixed_Query_Parts__c</fullName>
        <label>Fixed Query Parts</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Function__c</fullName>
        <label>Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Include_Synonyms__c</fullName>
        <defaultValue>true</defaultValue>
        <description>A field designed to determine whether the synonym search parameter should be excluded when Tag Cloud is selected</description>
        <inlineHelpText>When the value is selected, the search will be performed taking into account synonyms.
Important!
In this case, the number of records returned may be greater than the number specified in the Tag Cloud</inlineHelpText>
        <label>Include Synonyms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Industry_Experience__c</fullName>
        <label>Industry Experience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Airlines/Aviation</fullName>
                </value>
                <value>
                    <fullName>Animation</fullName>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Computer Games</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Consumer Product</fullName>
                </value>
                <value>
                    <fullName>Cosmetic</fullName>
                </value>
                <value>
                    <fullName>eCommerce</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Beverage</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Is_Search_Reset_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Search Reset Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__JobBoardApplicationIds__c</fullName>
        <label>JobBoardApplicationIds</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Board_Ids__c</fullName>
        <label>Job_Board_Ids</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Job_Boards__c</fullName>
        <label>Job_Boards</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Linked In</fullName>
                </value>
                <value>
                    <fullName>Monster</fullName>
                </value>
                <value>
                    <fullName>Career Builder</fullName>
                </value>
                <value>
                    <fullName>BioSpace</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Job_Status_MULTI__c</fullName>
        <description>The field is used to add multiselect functionality for Job SAM, allows selection of multiple values.
Search returns records with any of the selected values (OR search)</description>
        <label>Job Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Job_Status_Scale__c</fullName>
        <label>Job Status Scale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Status__c</fullName>
        <label>Job Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Job_Type_MULTI__c</fullName>
        <description>The field is used to add multiselect functionality for Job SAM, allows selection of multiple values.
Search returns records with any of the selected values (OR search)</description>
        <label>Job Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Fixed Term Booking</fullName>
                </value>
                <value>
                    <fullName>Permanent</fullName>
                </value>
                <value>
                    <fullName>Retained</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Job_Type_Scale__c</fullName>
        <label>Job Type Scale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Type__c</fullName>
        <label>Job Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Fixed Term Booking</fullName>
                </value>
                <value>
                    <fullName>Permanent</fullName>
                </value>
                <value>
                    <fullName>Retained</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipLabel>Resume Searches</relationshipLabel>
        <relationshipName>Resume_Searches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Job_for_Data_Source_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job for Data Source Application</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipLabel>Resume Searches (Job for Data Source Application)</relationshipLabel>
        <relationshipName>Resume_Searches_DSF_Job</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Job_for_Data_Source_JBA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job for Data Source JBA</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipLabel>Resume Searches (Job for Data Source JBA)</relationshipLabel>
        <relationshipName>Resume_Searches_DSF_JBA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Languages_Operator__c</fullName>
        <label>Languages Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OR</fullName>
                    <default>true</default>
                    <label>OR</label>
                </value>
                <value>
                    <fullName>AND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Languages__c</fullName>
        <label>Languages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__LastActivity_From_Date__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__LastActivity_To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Last_Open_Date__c</fullName>
        <label>Last Open Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__LocationTagsForMap__c</fullName>
        <label>LocationTagsForMap</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Maximum_Hourly__c</fullName>
        <label>Hourly Maximum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Maximum_Salary__c</fullName>
        <label>Annual Maximum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Minimum_Hourly__c</fullName>
        <label>Hourly Minimum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Minimum_Salary__c</fullName>
        <label>Annual Minimum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__One_Word__c</fullName>
        <inlineHelpText>This will allow you to perform an &quot;OR&quot; function.  To use this field simply type the word with a comma after.  Example, I need to find someone who has sales OR manager on their resume/CV I would enter:  sales, manager</inlineHelpText>
        <label>with at least one of the words</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Output_Language__c</fullName>
        <label>Output Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>NL</fullName>
                </value>
                <value>
                    <fullName>EN</fullName>
                    <default>true</default>
                    <label>EN</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Provide_Tag_Cloud__c</fullName>
        <label>Provide Tag Cloud</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Query_Parts__c</fullName>
        <label>Query Parts</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__RS20_Job_Board_List__c</fullName>
        <formula>$Setup.TR1__TalentRoverProperties__c.TR1__Talent_Rover_API__c + 
&quot;/connections/&quot; + $Organization.Id + &quot;/job_boards.json&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RS20 Job Board List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__RS20_Post_Url__c</fullName>
        <formula>$Setup.TR1__TalentRoverProperties__c.TR1__Talent_Rover_API__c + 
&quot;/connections/&quot; + $Organization.Id + &quot;/resume_searches.json?UID=&quot; &amp; CASESAFEID( $User.Id )  &amp; &quot;&amp;SID=&quot; + $Api.Session_ID</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RS20 Post Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__RS20_Url__c</fullName>
        <formula>$Setup.TR1__TalentRoverProperties__c.TR1__Talent_Rover_API__c + 
&quot;/connections/&quot; + $Organization.Id + &quot;/resume_searches/&quot; +  CASESAFEID(Id) + 
&quot;.json?SID=&quot; + $Api.Session_ID</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RS20 Url</label>
        <type>Text</type>
    </fields>
</CustomObject>